--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-versions: [14.21.3]
+        node-versions: [18.x]
 
     steps:
       - name: Checkout
@@ -27,8 +27,16 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: npm
-      #- run: npm test
-      - run: npm run build
+      #    cache-dependency-path: ./package-lock.json
+
+      #- name: Run Install
+      #  run: npm install
+
+      # - name: Run tests
+      #   run: npm test
+
+      - name: Build application
+        run: npm run build
 
       # - name: Create release artifact
       #   run: |
