--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,25 +12,28 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-versions: [18.x]
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       # Instalação de dependências, testes, construção e deploy.
 
-      - name: Instalação do Node.js ${{ matrix.node-version }}
+      - name: Instalação do Node.js 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: npm
-          cache-dependency-path: ./package-lock.json
+          node-version: '18.x'
 
-      #- name: Run Install
-      #  run: npm install
+      # cache the dependencies to speed up the build
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+              ${{ runner.os }}-node-
+
+      - name: Install Dependencies
+        run: npm i
 
       # - name: Run tests
       #   run: npm test
