--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -56,6 +56,18 @@ jobs:
       - name: Criando Build do app
         run: npm run build
 
+      - name: Criando Release do app
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body:
+          draft: false
+          prerelease: false
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -67,5 +79,7 @@ jobs:
       - name: Deploy para ambiente de testes (GitHub Pages)
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
+          tag_name: ${{ github.ref }}
+          tag_message: 'Deployment ${{ github.ref_name }}'
