--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -62,8 +62,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.run_number }}
+          release_name: Release ${{ github.run_number }}
           draft: false
           prerelease: false
 
@@ -80,5 +80,5 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
-          tag_name: ${{ github.ref }}
+          tag_name: ${{ github.run_number }}
           tag_message: 'Deployment ${{ github.ref_name }}'
