--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -73,9 +73,9 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./desafio-santander.zip
-          asset_name: desafio-santander-${{ github.run_number }}.zip
-          asset_content_type: application/gzip
+          #asset_path: ./desafio-santander.zip
+          #asset_name: desafio-santander-${{ github.run_number }}.zip
+          #asset_content_type: application/gzip
 
   deploy:
     needs: build
