--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -67,12 +67,12 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: upload linux artifact
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #- name: upload linux artifact
+      #  uses: actions/upload-release-asset@v1
+      #  env:
+      #    GITHUB_TOKEN: ${{ github.token }}
+      #  with:
+      #    upload_url: ${{ steps.create_release.outputs.upload_url }}
           #asset_path: ./desafio-santander.zip
           #asset_name: desafio-santander-${{ github.run_number }}.zip
           #asset_content_type: application/gzip
