--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,15 +8,6 @@ on:
     branches:
       - main
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
@@ -97,21 +88,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Deploy para ambiente de testes (GitHub Pages)
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-
-      #- name: Deploy para ambiente de testes (GitHub Pages)
-      #  uses: peaceiris/actions-gh-pages@v3
-      #  with:
-      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #    publish_dir: ./build
-      #    tag_name: ${{ github.run_number }}
-      #    tag_message: 'Deployment ${{ github.ref_name }}'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
+          tag_name: ${{ github.run_number }}
+          tag_message: 'Deployment ${{ github.ref_name }}'
