--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,7 @@ jobs:
       environment:
         name: github-pages
         url: ${{steps.deployment.outputs.page_url}}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       runs-on: ubuntu-latest
       needs: build
       steps:
